<resources>
    <string name="app_name">VoicePhotos</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="push_the_mic_to_insert_a_description">Tap the mic to insert a description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="tap_to_insert_location">Tap to insert Location</string>
    <string name="desc">Description</string>
    <string name="elab_ph">Elaborating Photo...</string>
</resources>
